Using ProcessBuilder rather than doing it manually.